--- a/content/popup.html
+++ b/content/popup.html
@@ -7,8 +7,10 @@
 		<script src="popup.js"></script>
 	</head>
 	<body>
-		<div id="option">Option One</div>
-		<div id="option">Option Two</div>
-		<div id="option">Option Three</div>
+		<h4>Review Board Screenshot Tool</h4>
+		<a href="#" id="1" class="options">Option One</a>
+		<a href="#" id="2" class="options">Option Two</a>
+		<a href="#" id="3" class="options">Option Three</a>
+		<a href="#" id="4" class="options">Option Four</a>
 	</body>
 </html>
