Refactor for better folder structure

--- a/content/popup.html
+++ b/content/popup.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Review Board Popup</title>
 		<link rel="stylesheet" type="text/css" href="css/popup.css">
-		<script src="popup.js"></script>
+		<script src="js/popup.js"></script>
 	</head>
 	<body>
 		<h4>Review Board Screenshot Tool</h4>
