--- a/content/popup.html
+++ b/content/popup.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h4>Review Board Screenshot Tool</h4>
-		<a href="#" id="1" class="options">Option One</a>
+		<a href="#" id="1" class="options">Capture all web content</a>
 		<a href="#" id="2" class="options">Option Two</a>
 		<a href="#" id="3" class="options">Option Three</a>
 		<a href="#" id="4" class="options">Option Four</a>
