Screenshot page can get API request from RB server (Not parsed, just added to div currently)

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -25,11 +25,11 @@
     <body>
     	<div id="options-section">
     		<span class ="option-title">Account:</span>
-	    		<select>
+	    		<select id="account-select">
 	    			<option value="test 1">Test</option>
 	    		</select>
     		<span class="option-title">Review Request:</span>
-	    		<select>
+	    		<select id="rr-id-select">
 	    			<option value="test 2">Test Again</option>
 	    		</select>
     		Post
@@ -37,4 +37,5 @@
     	<div id="screenshot-section">
 	        <img id="screenshot" src="images/filler.png">
         </div>
+        <div id="request-result-placeholder"></div>
 </html>
