--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -29,9 +29,7 @@
 	    			<option value="test 1">Test</option>
 	    		</select>
     		<span class="option-title">Review Request:</span>
-	    		<select id="rr-id-select">
-	    			<option value="test 2">Test Again</option>
-	    		</select>
+	    		<select id="rr-id-select"></select>
     		Post
     	</div>
     	<div id="screenshot-section">
