Use JQuery for AJAX

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-    <script src="js/screenshot.js"></script>
     <style>
     	#options-section {
     		background-color: gainsboro;
@@ -36,4 +35,8 @@
 	        <img id="screenshot" src="images/filler.png">
         </div>
         <div id="request-result-placeholder"></div>
+        <a href="www.google.com">Stuff</a>
+    </body>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/screenshot.js"></script>
 </html>
