screenshot.html grabs users from stored user data (chrome)

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -25,7 +25,7 @@
     	<div id="options-section">
     		<span class ="option-title">Account:</span>
 	    		<select id="account-select">
-	    			<option value="test 1">Test</option>
+	    			<option value="new">Add New Server</option>
 	    		</select>
     		<span class="option-title">Review Request:</span>
 	    		<select id="rr-id-select"></select>
