Add username to form and username is set when server selected

--- a/content/add_user.html
+++ b/content/add_user.html
@@ -5,6 +5,11 @@
         <label for="server">Server</label>
     </p>
 
+    <p class="username">
+        <input type="text" name="username" id="username">
+        <label for"username">Username</label>
+    </p>
+
     <p class="api-key">
         <input type="text" name="api_key" id="api_key">
         <label for="api_key">API Key</label>
