--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -29,7 +29,7 @@
 	    		</select>
     		<span class="option-title">Review Request:</span>
 	    		<select id="rr-id-select"></select>
-    		Post
+            <span id="username">Username: </span>
     	</div>
     	<div id="screenshot-section">
 	        <img id="screenshot" src="images/filler.png">
