Chrome fetches review requests from saved user data

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -28,7 +28,7 @@
 	    			<option value="new">Add New Server</option>
 	    		</select>
     		<span class="option-title">Review Request:</span>
-	    		<select id="rr-id-select"></select>
+	    		<select id="rr-select"></select>
             <span id="username">Username: </span>
     	</div>
     	<div id="screenshot-section">
