--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <html>
     <head>
+    <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/screenshot.css">
     </head>
+    <style>
+    .ui-state-default .ui-icon {
+        background-image: url("images/ui-icons_222222_256x240.png");
+    }
+    </style>
     <body>
     	<div id="options-section">
             <div id="new-user-section">
-                <button type="button">Add User</button>
+                <button type="button" id="add-user-button">Add User</button>
             </div>
             <div id="user-section">
         		<span class ="option-title">Account:</span>
@@ -18,12 +24,38 @@
                 <span id="username">Username: </span>
     	   </div>
            <div id="send-section">
-                <button type="button">Send Image</button>
+                <button type="button" id="send-button">Send Image</button>
            </div>
        </div>
     	<div id="screenshot-section">
 	        <img id="screenshot" height="640" src="images/filler.png">
         </div>
+
+        <div id="dialog-form" title="Create new user">
+        <form class="form">
+            <p class="server">
+                <input type="text" name="server" id="server">
+                <label for="server">Server</label>
+            </p>
+
+            <p class="username">
+                <input type="text" name="username" id="username">
+                <label for"username">Username</label>
+            </p>
+
+            <p class="api-key">
+                <input type="text" name="api_key" id="api_key">
+                <label for="api_key">API Key</label>
+            </p>
+
+            <p class="submit">
+                <button id="submit">Submit</button>
+            </p>
+        </form>
+        </div>
     </body>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/add_user.js"></script>
     <script src="js/screenshot.js"></script>
 </html>
