Move server update function to screenshot. Add user form functional

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -4,11 +4,6 @@
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/screenshot.css">
     </head>
-    <style>
-    .ui-state-default .ui-icon {
-        background-image: url("images/ui-icons_222222_256x240.png");
-    }
-    </style>
     <body>
     	<div id="options-section">
             <div id="new-user-section">
@@ -39,7 +34,7 @@
             </p>
 
             <p class="username">
-                <input type="text" name="username" id="username">
+                <input type="text" name="username" id="username-input">
                 <label for"username">Username</label>
             </p>
 
@@ -56,6 +51,7 @@
     </body>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+    <script src="js/save_user.js"></script>
     <script src="js/add_user.js"></script>
     <script src="js/screenshot.js"></script>
 </html>
