--- a/xpi/screenshot.html
+++ b/xpi/screenshot.html
@@ -37,8 +37,8 @@
             </p>
 
             <p class="api-key">
-                <input type="text" name="api_key" id="api_key">
-                <label for="api_key">API Key</label>
+                <input type="text" name="api-key" id="api-key">
+                <label for="api-key">API Key</label>
             </p>
 
             <p class="submit">
