Basic Jcrop added to Chrome 'capture area' option

--- a/crx/screenshot.html
+++ b/crx/screenshot.html
@@ -3,6 +3,7 @@
     <head>
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/screenshot.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.Jcrop.min.css">
     </head>
     <body>
         <div id="options-section">
@@ -49,6 +50,7 @@
     </body>
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery.Jcrop.min.js"></script>
     <script src="js/screenshot.js"></script>
     <script src="js/save_user.js"></script>
 </html>
