Resize image to 90% of browser size using canvas

--- a/crx/screenshot.html
+++ b/crx/screenshot.html
@@ -22,7 +22,8 @@
            </div>
        </div>
         <div id="screenshot-section">
-            <img id="screenshot" height="640" src="images/filler.png">
+            <canvas id='canvas'></canvas>
+            <img id="screenshot" src="images/filler.png">
         </div>
 
         <div id="dialog-form" title="Create new user">
