Crop working in Firefox. Set area variable to boolean.

--- a/xpi/popup.html
+++ b/xpi/popup.html
@@ -8,7 +8,7 @@
 	<body>
 		<h4>Review Board Screenshot Tool</h4>
 		<a href="#" id="1" class="options">Capture all web content</a>
-		<a href="#" id="2" class="options">Option Two</a>
+		<a href="#" id="2" class="options">Capture Area</a>
 		<a href="#" id="3" class="options">Option Three</a>
 		<a href="#" id="4" class="options">Option Four</a>
 	</body>
