Add success toast when screenshot posted.

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="css/screenshot.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.Jcrop.min.css">
+    <link rel="stylesheet" type="text/css" href="css/toastr.css">
     </head>
     <body>
         <div id="options-section">
