Add explanation comment in js. Use sections in screenshot.html

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/toastr.css">
     </head>
     <body>
-        <div id="options-section">
+        <section id="options-section">
             <div id="new-user-section">
                 <button id="add-user-button">Add User</button>
             </div>
@@ -22,11 +22,11 @@
                 <button id="crop-button">Crop Image</button>
                 <button id="send-button">Send Image</button>
            </div>
-       </div>
-        <div id="screenshot-section">
+       </section>
+        <section id="screenshot-section">
             <canvas id="canvas"></canvas>
             <img id="screenshot" src="images/filler.png">
-        </div>
+        </section>
         <div id="dialog-form" title="Create new user">
         <form class="form" id="user-form">
             <p class="server">
