Move toastr script to HTML file. Browserify included entire Jquery with require('toastr')

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -60,5 +60,6 @@
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.Jcrop.min.js"></script>
+    <script src="js/toastr.min.js"></script>
     <script src="js/screenshot.js"></script>
 </html>
