--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -5,6 +5,11 @@
     <link rel="stylesheet" type="text/css" href="css/screenshot.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.Jcrop.min.css">
     <link rel="stylesheet" type="text/css" href="css/toastr.css">
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/jquery.Jcrop.min.js"></script>
+    <script src="js/toastr.min.js"></script>
+    <script src="js/screenshot.js"></script>
     </head>
     <body>
         <section id="options-section">
@@ -28,26 +33,28 @@
             <img id="screenshot" src="images/filler.png">
         </section>
         <div id="dialog-form" title="Create new user">
-        <form class="form" id="user-form">
-            <p class="server">
-                <input type="text" name="server" id="server">
-                <label for="server">Server</label>
-            </p>
+            <p class="validateTips">All form fields are required.</p>
 
-            <p class="username">
-                <input type="text" name="username" id="username-input">
-                <label for"username">Username</label>
-            </p>
+            <form class="form" id="user-form">
+                <p class="server">
+                    <input type="text" name="server" id="server">
+                    <label for="server">Server</label>
+                </p>
 
-            <p class="api-key">
-                <input type="text" name="api-key" id="api-key">
-                <label for="api-key">API Key</label>
-            </p>
+                <p class="username">
+                    <input type="text" name="username" id="username-input">
+                    <label for"username">Username</label>
+                </p>
 
-            <p class="submit">
-                <button id="submit">Submit</button>
-            </p>
-        </form>
+                <p class="api-key">
+                    <input type="text" name="api-key" id="api-key">
+                    <label for="api-key">API Key</label>
+                </p>
+
+                <p class="submit">
+                    <button id="submit">Submit</button>
+                </p>
+            </form>
         </div>
         <!-- Form for holding crop box values-->
         <form>
@@ -57,9 +64,4 @@
             <input type="hidden" id="h" name="h" />
         </form>
     </body>
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/jquery.Jcrop.min.js"></script>
-    <script src="js/toastr.min.js"></script>
-    <script src="js/screenshot.js"></script>
 </html>
