Add loading GIF for AJAX

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -28,6 +28,9 @@
                 <button id="send-button">Send Image</button>
            </div>
        </section>
+       <div id="loading-div">
+            <img id="loading" src="images/ajax-loader.gif">
+       </div>
         <section id="screenshot-section">
             <canvas id="canvas"></canvas>
             <img id="screenshot" src="images/filler.png">
