--- a/crx/popup.html
+++ b/crx/popup.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <h4>Review Board Screenshot Tool</h4>
-        <a href="#" id="1" class="options">Capture all web content</a>
+        <a href="#" id="1" class="options">Capture Visible Content</a>
         <a href="#" id="2" class="options">Capture Area</a>
-        <a href="#" id="3" class="options">Option Three</a>
+        <a href="#" id="3" class="options">Capture All Content</a>
         <a href="#" id="4" class="options">Option Four</a>
     </body>
 </html>
