--- a/crx/popup.html
+++ b/crx/popup.html
@@ -11,6 +11,6 @@
         <a href="#" id="1" class="options">Capture Visible Content</a>
         <a href="#" id="2" class="options">Capture Area</a>
         <a href="#" id="3" class="options">Capture All Content</a>
-        <a href="#" id="4" class="options">Option Four</a>
+        <a href="#" id="4" class="options">Edit Users/Servers</a>
     </body>
 </html>
