--- a/content/users.html
+++ b/content/users.html
@@ -33,5 +33,6 @@
 
     <button id="save">Save Changes</button>
     <script src="js/users.js"></script>
+    <script src="js/modify_users.js"></script>
 </body>
 </html>
