Fix style errors. Merge popup.html files.

--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -19,7 +19,7 @@
             <div id="user-section">
                     <label for="account-select">Account:</label>
                     <select id="account-select"></select>
-                    <label for="rr-select">Review Request:
+                    <label for="rr-select">Review Request:</label>
                     <select id="rr-select"></select>
                 <span id="username">Username: </span>
            </div>
