--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/screenshot.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.Jcrop.min.css">
     <link rel="stylesheet" type="text/css" href="css/toastr.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.Jcrop.min.js"></script>
@@ -18,10 +19,10 @@
             </div>
             <div id="user-section">
                     <label for="account-select">Account:</label>
-                    <select id="account-select"></select>
+                    <select name="account-select" id="account-select"></select>
                     <label for="rr-select">Review Request:</label>
-                    <select id="rr-select"></select>
-                <span id="username">Username: </span>
+                    <select name="rr-select" id="rr-select"></select>
+                    <span id="username">Username: </span>
            </div>
            <div id="end-section">
                 <button id="crop-button">Crop Image</button>
@@ -29,7 +30,7 @@
            </div>
        </section>
        <div id="loading-div">
-            <img id="loading" src="images/ajax-loader.gif">
+            <i id="loading" class="fa fa-spinner fa-spin fa-3x"></i>
        </div>
         <section id="screenshot-section">
             <canvas id="canvas"></canvas>
