Fix .eslint tab spacing and just include font-awesome.min.css

--- a/content/users.html
+++ b/content/users.html
@@ -5,8 +5,8 @@
 <head>
     <title>Table Demo</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/users.css" />
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <thead>
             <tr>
                 <th scope="col">Server</th>
-                <th scope="col">Username</th>
+                <th scope="col">sername</th>
                 <th scope="col">API Key</th>
                 <th scope="col">Delete</th>
                 <th align="right" id="add" scope="col"><i class="fa fa-plus"></i></th>
