--- a/content/screenshot.html
+++ b/content/screenshot.html
@@ -2,10 +2,10 @@
 <html>
     <head>
     <link rel="stylesheet" href="css/jquery-ui.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/screenshot.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.Jcrop.min.css">
     <link rel="stylesheet" type="text/css" href="css/toastr.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.Jcrop.min.js"></script>
