--- a/content/users.html
+++ b/content/users.html
@@ -3,36 +3,36 @@
 <html lang="en">
 
 <head>
-    <title>Table Demo</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-    <link rel="stylesheet" href="css/users.css" />
+ <meta charset="utf-8" />
+ <title>Edit Users</title>
+ <link rel="stylesheet" href="css/font-awesome.min.css" />
+ <link rel="stylesheet" href="css/users.css" />
 </head>
 
 <body>
-    <table id="user-info">
-        <thead>
-            <tr>
-                <th scope="col">Server</th>
-                <th scope="col">sername</th>
-                <th scope="col">API Key</th>
-                <th scope="col">Delete</th>
-                <th align="right" id="add" scope="col"><i class="fa fa-plus"></i></th>
-            </tr>
-        </thead>
+ <table id="user-info">
+  <thead>
+   <tr>
+    <th scope="col">Server</th>
+    <th scope="col">sername</th>
+    <th scope="col">API Key</th>
+    <th scope="col">Delete</th>
+    <th align="right" id="add" scope="col"><i class="fa fa-plus"></i></th>
+   </tr>
+  </thead>
 
-        <tfoot>
-            <tr>
-                <td id="footer-text" align="center" colspan="5">Double click table cell to edit.</td>
-            </tr>
-        </tfoot>
+  <tfoot>
+   <tr>
+    <td id="footer-text" align="center" colspan="5">Double click table cell to edit.</td>
+   </tr>
+  </tfoot>
 
-        <tbody id='user-info-body'>
-        </tbody>
-    </table>
+  <tbody id='user-info-body'>
+  </tbody>
+ </table>
 
-    <button id="save">Save Changes</button>
-    <script src="js/users.js"></script>
-    <script src="js/modify_users.js"></script>
+ <button id="save">Save Changes</button>
+ <script src="js/users.js"></script>
+ <script src="js/modify_users.js"></script>
 </body>
 </html>
