Make user.html page look a bit nicer

--- a/content/users.html
+++ b/content/users.html
@@ -5,33 +5,39 @@
 <head>
  <meta charset="utf-8" />
  <title>Edit Users</title>
+ <link rel="stylesheet" href="css/jquery-ui.min.css">
  <link rel="stylesheet" href="css/font-awesome.min.css" />
  <link rel="stylesheet" href="css/users.css" />
+ <script src="js/jquery-2.1.4.min.js"></script>
+ <script src="js/jquery-ui.min.js"></script>
 </head>
 
 <body>
- <table id="user-info">
-  <thead>
-   <tr>
-    <th scope="col">Server</th>
-    <th scope="col">sername</th>
-    <th scope="col">API Key</th>
-    <th scope="col">Delete</th>
-    <th align="right" id="add" scope="col"><i class="fa fa-plus"></i></th>
-   </tr>
-  </thead>
+  <div id="table-div">
+   <h1>Edit User Information</h1>
+   <table id="user-info">
+    <thead>
+     <tr>
+      <th scope="col">Server</th>
+      <th scope="col">Username</th>
+      <th scope="col">API Key</th>
+      <th scope="col">Delete</th>
+      <th align="right" id="add" scope="col"><i class="fa fa-plus"></i></th>
+     </tr>
+    </thead>
 
-  <tfoot>
-   <tr>
-    <td id="footer-text" align="center" colspan="5">Double click table cell to edit.</td>
-   </tr>
-  </tfoot>
+    <tfoot>
+     <tr>
+      <td id="footer-text" align="center" colspan="5">Double click table cell to edit.</td>
+     </tr>
+    </tfoot>
 
-  <tbody id='user-info-body'>
-  </tbody>
- </table>
+    <tbody id='user-info-body'>
+    </tbody>
+   </table>
+   <button id="save">Save Changes</button>
+ </div>
 
- <button id="save">Save Changes</button>
  <script src="js/users.js"></script>
  <script src="js/modify_users.js"></script>
 </body>
