--- a/content/users.html
+++ b/content/users.html
@@ -8,8 +8,10 @@
  <link rel="stylesheet" href="css/jquery-ui.min.css">
  <link rel="stylesheet" href="css/font-awesome.min.css" />
  <link rel="stylesheet" href="css/users.css" />
+ <link rel="stylesheet" type="text/css" href="css/toastr.css">
  <script src="js/jquery-2.1.4.min.js"></script>
  <script src="js/jquery-ui.min.js"></script>
+ <script src="js/toastr.min.js"></script>
 </head>
 
 <body>
