Update popup button ids to names rather than numbers

--- a/content/popup.html
+++ b/content/popup.html
@@ -15,9 +15,9 @@
    </div>
    <div id="buttons">
     <!-- Chrome automatically gives focus to one of the elements with tabindex > 0 -->
-    <a href="#" tabindex="-1" id="1" class="options">Capture Visible Content</a>
-    <a href="#" tabindex="-1" id="2" class="options">Capture Area</a>
-    <a href="#" tabindex="-1" id="3" class="options">Edit Users/Servers</a>
+    <a href="#" tabindex="-1" id="capture-visible-content" class="options">Capture Visible Content</a>
+    <a href="#" tabindex="-1" id="capture-area" class="options">Capture Area</a>
+    <a href="#" tabindex="-1" id="accounts" class="options">Edit Users/Servers</a>
    </div>
   </div>
  </body>
